# esaf-framework

./: .env.example  .eslintrc.json  .gitignore  AGENT_IMPLEMENTATION_COMPLETE.md  CHAT_CONTINUITY.md  COGNITIVE_UPDATE.md  DEBUG_REPORT.md  DYNAMIC_MODEL_FETCHING.md  FIX_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LLM_CONFIGURATION.md  README.md  REDESIGN_SUMMARY.md  diagnose-issues.js  fix-imports.py  index.html  package.json  start-esaf.sh  tailwind.config.js  test-agents.js  test-chat-continuity.js  test-dynamic-models.js  test-framework.js  test-llm-service.js  test-real-framework.js  test-smart-routing.js  tsconfig.json  tsconfig.node.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs
src/agents/: base-agent.ts  cognitive-data-analysis-agent.ts  data-analysis-agent.ts  decision-making-agent.ts  game-theory-agent.ts  optimization-agent.ts  swarm-intelligence-agent.ts
src/components/: AgentCard.tsx  AgentPanel.tsx  ChatHistory.tsx  ChatInterface.tsx  Dashboard.tsx  DataInputPanel.tsx  DocumentLibrary.tsx  EventLog.tsx  Header.tsx  LLMConfiguration.tsx  MainInterface.tsx  Settings.tsx  Sidebar.tsx  SystemDashboard.tsx  TaskList.tsx
src/core/: cognitive-substrate.ts  llm-service.ts  orchestrator.ts  real-algorithms.ts  shared-data-context.ts  smart-query-router.ts  types.ts
src/stores/: storage-manager.ts
src/tests/: integration.test.ts
